overlap and time fixes were done

--- a/quiz.css
+++ b/quiz.css
@@ -28,12 +28,13 @@
 
   #quiz-box {
       width: 800px;
-      max-width: 80%;
+      max-width: 60%;
       background-color: white;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 30px;
       font-size: 25px;
+      transition: all 500ms ease-out;
       
   }
 
@@ -229,7 +230,14 @@
     display: block;
     width: 30px;
     height: 5px;
-    background-color: white;
+    background-color: black;
     margin: 3px 0px;
-    border-radius: 10px;
+    border-radius: 30px;
   }
+
+  #quiz-box.active {
+    margin-left: 200px;
+    
+  }
+
+  
